# lpm-structure-learning

./: README.md  pyproject.toml
jupyter/: model-building-tutorial.ipynb
resources/: ces-10-cols.parquet
src/lpm_structure_learning/: __init__.py  learn_GenSPN.py
tests/: test_learn_GenSPN.py
